--- a/service-front/app/src/Actor/templates/actor/lpa-blank-dashboard.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-blank-dashboard.html.twig
@@ -12,6 +12,8 @@
 
         <main class="govuk-main-wrapper" id="main-content" role="main">
 
+            {{ include('@actor/partials/upcoming-service-downtime.html.twig') }}
+
             {{ include('@actor/partials/flash-message.html.twig', {flash_obj: flash, flash_key:'Actor\\Handler\\RemoveLpaHandler::REMOVE_LPA_FLASH_MSG'}) }}
 
             <div class="govuk-grid-row">
