--- a/service-front/app/src/Viewer/templates/viewer/enter-code.html.twig
+++ b/service-front/app/src/Viewer/templates/viewer/enter-code.html.twig
@@ -9,6 +9,10 @@
     </div>
 
     <main class="govuk-main-wrapper" id="main-content" role="main">
+        <div>
+            {{ include('@viewer/partials/upcoming-service-downtime.html.twig') }}
+        </div>
+
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
 
