Content change applied

--- a/service-front/app/src/Actor/templates/actor/partials/upcoming-service-downtime.html.twig
+++ b/service-front/app/src/Actor/templates/actor/partials/upcoming-service-downtime.html.twig
@@ -6,7 +6,7 @@
     </div>
     <div class="govuk-notification-banner__content">
         <p class="govuk-notification-banner__heading">
-            {% trans %}This service will be unavailable between 9pm on Saturday 31st March 2023 and 9:30 am 1st April 2023.{% endtrans %}
+            {% trans %}This service will be unavailable between 9pm on Friday 31st March 2023 and 9:30am on Saturday 1st April 2023.{% endtrans %}
         </p>
         <p class="govuk-body">{% trans %}If you need to use your lasting power of attorney during this time you can still use the paper LPA document.{% endtrans %}</p>
     </div>
