--- a/service-front/app/src/Actor/templates/actor/partials/warning-upcoming-service-downtime.html.twig
+++ b/service-front/app/src/Actor/templates/actor/partials/warning-upcoming-service-downtime.html.twig
@@ -3,7 +3,7 @@
     <div>
         <strong class="govuk-warning-text__text">
             <span class="govuk-warning-text__assistive">Warning</span>
-            {% trans %}This service will be unavailable between 9pm on Saturday 31st March 2023 and 9:30 am 1st April 2023.{% endtrans %}
+            {% trans %}This service will be unavailable between 9pm on Friday 31st March 2023 and 9:30am on Saturday 1st April 2023.{% endtrans %}
             </strong>
     </div>
     <div class="govuk-warning-text__text">
