--- a/service-front/app/src/Actor/templates/actor/confirm-remove-lpa.html.twig
+++ b/service-front/app/src/Actor/templates/actor/confirm-remove-lpa.html.twig
@@ -29,10 +29,10 @@
                         <p class="govuk-body">{% trans %}If you remove an LPA from your Use a lasting power of attorney account:{% endtrans %}</p>
 
                         <ul class="govuk-list govuk-list--bullet">
-                            <li>{% trans %}all access codes you’ve created for that LPA will be cancelled{% endtrans %}</li>
+                            <li>{% trans %}all access codes you’ve created for this LPA will be valid until they are cancelled or expire{% endtrans %}</li>
                             <li>{% trans %}you’ll not be able to see how the LPA is being used or has been used{% endtrans %}</li>
                             {% if lpa is not null and lpa.status|lower == 'registered' %}
-                                <li>{% trans %}you must contact us for a new activation key if you want to add the LPA back to your account{% endtrans %}</li>
+                                <li>{% trans %}you will need to request a new activation key if you want to add the LPA back to your account{% endtrans %}</li>
                             {% endif %}
                         </ul>
                     {% endif %}
