--- a/service-front/app/src/Viewer/templates/viewer/partials/upcoming-service-downtime.html.twig
+++ b/service-front/app/src/Viewer/templates/viewer/partials/upcoming-service-downtime.html.twig
@@ -6,7 +6,7 @@
     </div>
     <div class="govuk-notification-banner__content">
         <p class="govuk-notification-banner__heading">
-            {% trans %}This service will be unavailable between 9pm on Friday 31st March 2023 and 9:30am on Saturday 1st April 2023.{% endtrans %}
+            {% trans %}This service will be unavailable between 2pm  and 3pm on Thursday 27th April 2023.{% endtrans %}
         </p>
     </div>
 </div>
