added message content for preference only

--- a/service-front/app/src/Actor/templates/actor/lpa-show-viewercode.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-show-viewercode.html.twig
@@ -86,7 +86,15 @@
                                     {% endtrans %}
                                 </p>
                             {% endif %}
-                       {% endif %}
+                        {% elseif lpa.applicationHasGuidance %}
+                            {% if not is_donor_signature_date_too_old(lpa) %}
+                                <p class="govuk-body">
+                                    {% trans %}
+                                        Scanned copies of the donor’s preferences will be shown in the LPA summary. You should check the scanned image - if it’s not clear, organisations may ask to see the paper LPA.
+                                    {% endtrans %}
+                                </p>
+                            {% endif %}
+                        {% endif %}
 {#                    {% endif %}#}
 
 
