--- a/service-front/app/src/Actor/templates/actor/check-access-codes.html.twig
+++ b/service-front/app/src/Actor/templates/actor/check-access-codes.html.twig
@@ -58,7 +58,7 @@
 
                             <p class="govuk-body">{% trans %}Give an organisation their access code so they can view this LPA. They should go to www.gov.uk/view-lpa to use the code.{% endtrans %}</p>
 
-                            {% if lpa.applicationHasRestrictions or lpa.applicationHasGuidance %}
+                            {% if (lpa.applicationHasRestrictions or lpa.applicationHasGuidance) and not feature_enabled("instructions_and_preferences") %}
                             <div class="govuk-warning-text">
                                 <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                                 <strong class="govuk-warning-text__text">
