wip to add left margins to pdf

--- a/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
+++ b/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
@@ -14,7 +14,7 @@
             </a>
         </div>
 
-        <main class="govuk-main-wrapper" id="main-content" role="main">
+        <main class="govuk-main-wrapper opg-print-pdf" id="main-content" role="main">
             <div class="govuk-grid-row govuk-!-margin-top-0 govuk-!-padding-bottom-0">
                 <div class="govuk-grid-column-two-thirds">
                     <span class="govuk-caption-xl govuk-!-margin-bottom-3 govuk-!-margin-top-0">{{ actor_name(lpa.donor, false) }}, {{ lpa.caseSubtype == 'pfa' ? 'Property and finance' | trans : 'Health and welfare' | trans }}</span>
