remove content from LPA summary behind flag

--- a/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
+++ b/service-front/app/src/Actor/templates/actor/view-lpa-summary.html.twig
@@ -75,9 +75,11 @@
                                 {% endif %}
                             {% endif %}
                         </p>
-                        <p class="govuk-body body-alt-1">
-                            {{ include('@actor/partials/lpa-instructions-preferences-warning-message.html.twig') }}
-                        </p>
+                        {% if not feature_enabled("instructions_and_preferences") %}
+                            <p class="govuk-body body-alt-1">
+                                {{ include('@actor/partials/lpa-instructions-preferences-warning-message.html.twig') }}
+                            </p>
+                        {% endif %}
                     </div>
                 </div>
             {% endif %}
