--- a/service-admin/web/assets/main.scss
+++ b/service-admin/web/assets/main.scss
@@ -1,5 +1,5 @@
 $govuk-page-width: 960px;
 $moj-page-width: 960px;
 
-@import "node_modules/govuk-frontend/govuk/all";
-@import "node_modules/@ministryofjustice/frontend/moj/all";
+@import "../../node_modules/govuk-frontend/govuk/all";
+@import "../../node_modules/@ministryofjustice/frontend/moj/all";
